--- a/SigaaBiblio/res/layout/activity_busca_artigo.xml
+++ b/SigaaBiblio/res/layout/activity_busca_artigo.xml
@@ -2,146 +2,148 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EFF3FA"
     android:orientation="vertical" >
-	 <!-- android:background="#2932aa"-->
-	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="70dp"
-	    android:background="@drawable/borda"
-	    android:gravity="center"
-	    android:orientation="horizontal" >
 
-	    <TextView
-	        android:id="@+id/textViewTitleArtigo"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="@string/title_busca_artigo"
-	        android:textColor="@android:color/white"
-	        android:textSize="25dp" />
-	</LinearLayout>
-  	
-	
-	<ScrollView
-	    android:id="@+id/scrollView1"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" >
+    <!-- android:background="#2932aa" -->
 
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:orientation="vertical" >
-	
-	<TextView
-	    android:id="@+id/textViewTextBuscaArtigo"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_gravity="center"
-	    android:layout_margin="10dp"
-	    android:text="@string/text_busca_artigo"
-		android:gravity="center"
-	    android:textSize="20dp" />
-	
-	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:gravity="center" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@drawable/background1"
+        android:gravity="center"
+        android:orientation="horizontal" >
 
-		<TextView
-		    android:id="@+id/textViewTituloArtigo"	    
-  		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="Título: " 
-		    android:textSize="20dp"
-		    android:layout_margin="7dp"/>
+        <TextView
+            android:id="@+id/textViewTitleArtigo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_busca_artigo"
+            android:textColor="@android:color/white"
+            android:textSize="25dp" />
+    </LinearLayout>
 
-		<EditText
-		    android:id="@+id/editTextTituloArtigo"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="17dp"
-		    android:ems="10">
-		</EditText>
-	    
-	</LinearLayout>
-	
-	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:gravity="center" >
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="391dp" >
 
-		<TextView
-		    android:id="@+id/textViewAutorArtigo"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_margin="7dp"	    
-		    android:text="Autor:"
-		    android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
-		<EditText
-		    android:id="@+id/editTextAutorArtigo"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="27dp"
-		    android:ems="10"
-		    />
-	    
-	</LinearLayout>
+            <TextView
+                android:id="@+id/textViewTextBuscaArtigo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:background="@drawable/background2"
+                android:gravity="center"
+                android:text="@string/text_busca_artigo"
+                android:textSize="20dp" />
 
-	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:gravity="center" >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" >
 
-		<TextView
-		    android:id="@+id/textViewPalavraChaveArtigo"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="Palavra-\nChave:"
-		    android:textSize="20dp"
-		    android:layout_marginRight="10dp"
-		    android:layout_marginLeft="7dp"
-		     />
+                <TextView
+                    android:id="@+id/textViewTituloArtigo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:text="Título: "
+                    android:textSize="20dp" />
 
-		<EditText
-		    android:id="@+id/editTextPalavraChaveArtigo"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="-4dp"
-		    android:ems="10"
-		    />
-	    
-	</LinearLayout>
-	
-	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:gravity="center" >
+                <EditText
+                    android:id="@+id/editTextTituloArtigo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="17dp"
+                    android:ems="10" >
+                </EditText>
+            </LinearLayout>
 
-		<TextView
-		    android:id="@+id/textViewBibliotecaArtigo"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"	    
-		    android:text="Biblioteca:"
-		    android:textSize="20dp"
-		    android:layout_marginLeft="7dp"
-		     />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" >
 
-		<Spinner
-		    android:id="@+id/spinnerBibliotecaArtigo"
-		    android:layout_width="wrap_content"
-		    android:layout_height="50dp" />
-	    
-	</LinearLayout>
-	
-	<Button
-	    android:id="@+id/buttonBuscarArtigo"
-	    android:layout_width="230dp"
-	    android:layout_height="wrap_content"
-	    android:layout_gravity="center"
-	    android:layout_marginTop="30dp"
-	    android:text="Pesquisar" />
-	
-	 </LinearLayout>
-	</ScrollView>
-  
+                <TextView
+                    android:id="@+id/textViewAutorArtigo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:text="Autor:"
+                    android:textSize="20dp" />
+
+                <EditText
+                    android:id="@+id/editTextAutorArtigo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="27dp"
+                    android:ems="10" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" >
+
+                <TextView
+                    android:id="@+id/textViewPalavraChaveArtigo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="10dp"
+                    android:text="Palavra-\nChave:"
+                    android:textSize="20dp" />
+
+                <EditText
+                    android:id="@+id/editTextPalavraChaveArtigo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="-4dp"
+                    android:ems="10" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" >
+
+                <TextView
+                    android:id="@+id/textViewBibliotecaArtigo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="7dp"
+                    android:text="Biblioteca:"
+                    android:textSize="20dp" />
+
+                <Spinner
+                    android:id="@+id/spinnerBibliotecaArtigo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/buttonBuscarArtigo"
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:text="Pesquisar" />
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.61"
+        android:background="@drawable/background3"
+        android:orientation="vertical" >
+    </LinearLayout>
+
 </LinearLayout>
