--- a/SigaaBiblio/res/layout/activity_menu.xml
+++ b/SigaaBiblio/res/layout/activity_menu.xml
@@ -2,10 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFF3FA"
     android:orientation="vertical"
     tools:context=".MenuActivity" >
-
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,85 +30,93 @@
             android:layout_weight="0.12"
             android:src="@drawable/contact" />
     </LinearLayout>
-
-    <LinearLayout
+    
+ 
+           <ScrollView
+        android:id="@+id/scrollView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/background2"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="13dp" >
+        android:layout_height="wrap_content" >
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/textViewDataEmprestimo"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Total de Empréstimos em Aberto: N"
-                android:textSize="17dp" />
+                android:layout_margin="5dp"
+                android:background="@drawable/background2"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="13dp" >
 
-            <TextView
-                android:id="@+id/textViewDataRenovacao"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Posso fazer Empréstimos: SIM"
-                android:textSize="17dp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/textViewDataEmprestimo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Total de Empréstimos em Aberto: N"
+                        android:textSize="17dp" />
+
+                    <TextView
+                        android:id="@+id/textViewDataRenovacao"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Posso fazer Empréstimos: SIM"
+                        android:textSize="17dp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <com.nti.SigaaBiblio.layouts.DashboardLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_weight="1.53" >
+
+                <Button
+                    android:id="@+id/consultarHistorico"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Consultar Acervo" />
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Consultar Artigo" />
+
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Renovação" />
+
+                <Button
+                    android:id="@+id/button4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Minha Situação" />
+
+                <Button
+                    android:id="@+id/button5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Meus Empréstimos" />
+
+                <Button
+                    android:id="@+id/button6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sair" />
+            </com.nti.SigaaBiblio.layouts.DashboardLayout>
         </LinearLayout>
-    </LinearLayout>
 
-    <com.nti.SigaaBiblio.layouts.DashboardLayout
-        android:layout_width="match_parent"
-        android:layout_height="248dp"
-        android:background="#EFF3FA" >
-
-        <Button
-            android:id="@+id/consultarHistorico"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Consultar Acervo" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Consultar Artigo" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Renovação" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Minha Situação" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Meus Empréstimos" />
-
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sair" />
-    </com.nti.SigaaBiblio.layouts.DashboardLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.63"
-        android:background="@drawable/background3"
-        android:orientation="vertical" >
-    </LinearLayout>
-
+		</ScrollView>
+        
 </LinearLayout>
+
+
