--- a/SigaaBiblio/res/layout/activity_renovacao.xml
+++ b/SigaaBiblio/res/layout/activity_renovacao.xml
@@ -2,35 +2,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFF3FA"
     android:orientation="vertical" >
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="70dp"
+	    android:background="@drawable/borda"
+	    android:gravity="center"
+	    android:orientation="horizontal" >
+
+	    <TextView
+	        android:id="@+id/textViewTitleRenovacao"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/header_renovacao"
+	        android:textColor="@android:color/white"
+	        android:textSize="25dp" />
+	</LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@drawable/background1"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/textViewTitleRenovacao"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/header_renovacao"
-            android:textColor="@android:color/white"
-            android:textSize="25dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+		android:orientation="horizontal"
+        android:layout_height="wrap_content" >
 
         <ListView
             android:id="@+id/listViewResultados"
             android:layout_width="wrap_content"
             android:layout_height="337dp" >
+
         </ListView>
+
     </LinearLayout>
 
     <LinearLayout
@@ -43,14 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/header_renovacao" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.21"
-        android:background="@drawable/background3"
-        android:orientation="vertical" >
     </LinearLayout>
 
 </LinearLayout>
