--- a/SigaaBiblio/res/layout/activity_resultado_busca.xml
+++ b/SigaaBiblio/res/layout/activity_resultado_busca.xml
@@ -3,14 +3,12 @@
     android:id="@+id/linear"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#EFF3FA"
-     >
+    android:orientation="vertical" >
 
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="70dp"
-	    android:background="@drawable/background1"
+	    android:background="@drawable/borda"
 	    android:gravity="center"
 	    android:orientation="horizontal" >
 
