--- a/SigaaBiblio/res/layout/activity_situacao_usuario.xml
+++ b/SigaaBiblio/res/layout/activity_situacao_usuario.xml
@@ -3,9 +3,7 @@
 	    xmlns:tools="http://schemas.android.com/tools"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    tools:context=".SituacaoUsuarioActivity"
-	    android:background="#EFF3FA"
-	    >
+	    tools:context=".SituacaoUsuarioActivity">
 	    
 	<LinearLayout
 	    android:layout_width="match_parent"
@@ -15,7 +13,7 @@
 	    <LinearLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="70dp"
-		    android:background="@drawable/background1"
+		    android:background="@drawable/borda"
 		    android:gravity="center"
 		    android:orientation="horizontal">
 	        
