--- a/SigaaBiblio/res/layout/activity_busca_livro.xml
+++ b/SigaaBiblio/res/layout/activity_busca_livro.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/background_softblue" >
 	 <!-- android:background="#2932aa"-->
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="70dp"
-	    android:background="@drawable/borda"
+	    android:background="@drawable/background1"
 	    android:gravity="center"
 	    android:orientation="horizontal" >
 
@@ -38,7 +39,8 @@
 	    android:layout_margin="10dp"
 	    android:text="@string/text_busca_livro"
 		android:gravity="center"
-	    android:textSize="20dp" />
+	    android:textSize="20dp"
+	    android:background="@drawable/background2" />
 	
 	<LinearLayout
 	    android:layout_width="match_parent"
