--- a/SigaaBiblio/res/layout/activity_dados_titulo.xml
+++ b/SigaaBiblio/res/layout/activity_dados_titulo.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/background_softblue" >
 	 <!-- android:background="#2932aa"-->
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="70dp"
-	    android:background="@drawable/borda"
+	    android:background="@drawable/background1"
 	    android:gravity="center"
 	    android:orientation="horizontal" >
 
