--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/background_softblue" >
 	 <!-- android:background="#2932aa"-->
 	<LinearLayout
 	    android:layout_width="match_parent"
@@ -42,7 +43,8 @@
 	    android:layout_margin="10dp"
 	    android:text="Informe seu cadastro no SIGAA UFPB"
 		android:gravity="center"
-	    android:textSize="20dp" />
+	    android:textSize="20dp"
+	    android:background="@drawable/background2" />
 	
 	<LinearLayout
 	    android:layout_width="match_parent"
@@ -53,16 +55,17 @@
 		    android:id="@+id/textViewDataRenovacao"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:text="Login: " 
+		    android:text="Usuário: " 
 		    android:textSize="20dp"
 		    android:layout_margin="10dp"/>
 
 		<EditText
 		    android:id="@+id/dataFinalText"
-		    android:layout_width="wrap_content"
+		    android:layout_width="206dp"
 		    android:layout_height="wrap_content"
-		    android:singleLine="true"
-		    android:ems="10">
+		    android:ems="10"
+		    android:singleLine="true" >
+
 		</EditText>
 	    
 	</LinearLayout>
@@ -83,12 +86,12 @@
 
 		<EditText
 		    android:id="@+id/editText2"
-		    android:layout_width="wrap_content"
+		    android:layout_width="206dp"
 		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="4dp"
+		    android:layout_marginLeft="22dp"
 		    android:ems="10"
-		    android:singleLine="true"
-		    android:inputType="textPassword" >
+		    android:inputType="textPassword"
+		    android:singleLine="true" >
 
 		    <requestFocus />
 		</EditText>
