--- a/SigaaBiblio/res/layout/activity_menu.xml
+++ b/SigaaBiblio/res/layout/activity_menu.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MenuActivity" >
+    tools:context=".MenuActivity"
+    android:background="@color/background_softblue" >
     
     <LinearLayout
         android:layout_width="match_parent"
