--- a/SigaaBiblio/res/layout/activity_selecionar_historico.xml
+++ b/SigaaBiblio/res/layout/activity_selecionar_historico.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/background_softblue" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@drawable/borda"
+        android:background="@drawable/background1"
         android:gravity="center"
         android:orientation="horizontal" >
 
@@ -33,7 +34,8 @@
             android:layout_weight="0.59"
             android:gravity="center"
             android:text="@string/prompt_periodo_historico"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:background="@drawable/background2" />
     </LinearLayout>
 
 	 <LinearLayout
