--- a/SigaaBiblio/res/layout/activity_situacao_usuario.xml
+++ b/SigaaBiblio/res/layout/activity_situacao_usuario.xml
@@ -4,12 +4,13 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:orientation="vertical"
+	    android:background="@color/background_softblue"
 	    tools:context=".SituacaoUsuarioActivity">
 	    	    
 	    <LinearLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="70dp"
-		    android:background="@drawable/borda"
+		    android:background="@drawable/background1"
 		    android:gravity="center"
 		    android:orientation="horizontal">
 	        
