--- a/SigaaBiblio/res/layout/emprestimos_layout.xml
+++ b/SigaaBiblio/res/layout/emprestimos_layout.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Esse layout é utilizado pela classe EmprestimoAdapter para inserir os
+checkbox na listview -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
      android:orientation="vertical"
