--- a/SigaaBiblio/res/layout/activity_selecionar_historico.xml
+++ b/SigaaBiblio/res/layout/activity_selecionar_historico.xml
@@ -91,7 +91,7 @@
 	         android:textSize="15dp" />
 
 	     <EditText
-	         android:id="@+id/dataFinalText"
+	         android:id="@+id/editTextLoginUsuario"
 	         android:layout_width="126dp"
 	         android:layout_height="wrap_content"
 	         android:layout_margin="7dp"
