Bibliotecas Disponiveis, spinner

--- a/SigaaBiblio/res/layout/activity_menu.xml
+++ b/SigaaBiblio/res/layout/activity_menu.xml
@@ -83,7 +83,8 @@
                     android:id="@+id/consultarHistorico"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Consultar Acervo" />
+                    android:text="Consultar Acervo"
+                    android:onClick="consultarAcervo" />
 
                 <Button
                     android:id="@+id/button2"
