Situacao do usuario implementada do lado Cliente

--- a/SigaaBiblio/res/layout/activity_situacao_usuario.xml
+++ b/SigaaBiblio/res/layout/activity_situacao_usuario.xml
@@ -46,7 +46,7 @@
 	   </ViewFlipper>
 	
 		<TextView
-		    android:id="@+id/textView2"
+		    android:id="@+id/textViewSituacaoUsuario2"
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
 		    android:gravity="center"
