--- a/SigaaBiblio/res/layout/activity_menu.xml
+++ b/SigaaBiblio/res/layout/activity_menu.xml
@@ -109,7 +109,8 @@
                     android:id="@+id/button5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Meus Empréstimos" />
+                    android:text="Meus Empréstimos"
+                     />
 
                 <Button
                     android:id="@+id/button6"
