--- a/SigaaBiblio/res/layout/activity_historico_emprestimos.xml
+++ b/SigaaBiblio/res/layout/activity_historico_emprestimos.xml
@@ -3,19 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_softblue"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/login_body" >
 
     <!-- android:background="#2932aa" -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@drawable/background1"
+        android:background="@drawable/background_azul1"
         android:gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:id="@+id/login_header" >
 
         <TextView
-            android:id="@+id/textViewHistorico"
+            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/titleHistorico"
