--- a/SigaaBiblio/res/layout-land/activity_busca_artigo.xml
+++ b/SigaaBiblio/res/layout-land/activity_busca_artigo.xml
@@ -7,7 +7,7 @@
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="70dp"
-	    android:background="@drawable/borda"
+	    android:background="@drawable/background_azul1"
 	    android:gravity="center"
 	    android:orientation="horizontal" >
 
