--- a/SigaaBiblio/res/layout-land/activity_menu.xml
+++ b/SigaaBiblio/res/layout-land/activity_menu.xml
@@ -13,7 +13,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_margin="5dp"
-	        android:background="@drawable/background1"
+	        android:background="@drawable/background_azul1"
 	        android:gravity="center"
 	        android:orientation="horizontal" >
 	
@@ -39,7 +39,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_margin="5dp"
-	        android:background="@drawable/background2"
+	        android:background="@drawable/background_azul2"
 	        android:gravity="center"
 	        android:orientation="horizontal"
 	        android:padding="13dp">
