--- a/SigaaBiblio/res/layout/activity_busca_livro.xml
+++ b/SigaaBiblio/res/layout/activity_busca_livro.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background_softblue" >
+    android:background="@color/background_softblue"
+    android:id="@+id/login_body" >
 	 <!-- android:background="#2932aa"-->
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="70dp"
-	    android:background="@drawable/background1"
+	    android:background="@drawable/background_azul1"
 	    android:gravity="center"
-	    android:orientation="horizontal" >
+	    android:orientation="horizontal"
+	    android:id="@+id/login_header" >
 
 	    <TextView
 	        android:id="@+id/textViewTitleLivro"
@@ -32,7 +34,7 @@
 	        android:orientation="vertical" >
   	
 	<TextView
-	    android:id="@+id/textViewTextBuscaLivro"
+	 
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="center"
@@ -40,7 +42,8 @@
 	    android:text="@string/text_busca_livro"
 		android:gravity="center"
 	    android:textSize="20dp"
-	    android:background="@drawable/background2" />
+	    android:background="@drawable/background_azul2"
+	    android:id="@+id/login_header_2" />
 	
 	<LinearLayout
 	    android:layout_width="match_parent"
