--- a/SigaaBiblio/res/layout/activity_dados_titulo.xml
+++ b/SigaaBiblio/res/layout/activity_dados_titulo.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background_softblue" >
+    android:background="@color/background_softblue"
+    android:id="@+id/login_body" >
 	 <!-- android:background="#2932aa"-->
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="70dp"
-	    android:background="@drawable/background1"
+	    android:background="@drawable/background_azul1"
 	    android:gravity="center"
-	    android:orientation="horizontal" >
+	    android:orientation="horizontal"
+	    android:id="@+id/login_header" >
 
 	    <TextView
 	        android:id="@+id/textViewTitleDadostitulo"
