--- a/SigaaBiblio/res/layout/activity_exemplares.xml
+++ b/SigaaBiblio/res/layout/activity_exemplares.xml
@@ -3,24 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFF3FA"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/login_body" >
 
     <!-- android:background="#2932aa" -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@drawable/background1"
+        android:background="@drawable/background_azul1"
         android:gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:id="@+id/login_header" >
 
         <TextView
-            android:id="@+id/textViewExemplares"
+           
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/title_exemplares"
             android:textColor="@android:color/white"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+             />
     </LinearLayout>
 
     <ViewFlipper
@@ -54,7 +57,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background3"
+        android:background="@drawable/background_azul2"
         android:orientation="vertical" >
     </LinearLayout>
 </LinearLayout>
