--- a/SigaaBiblio/res/layout/activity_menu.xml
+++ b/SigaaBiblio/res/layout/activity_menu.xml
@@ -4,15 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MenuActivity"
-    android:background="@color/background_softblue" >
+    android:background="@color/background_softblue"
+    android:id="@+id/login_body" >
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@drawable/background1"
+        android:background="@drawable/background_azul1"
         android:gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:id="@+id/login_header" >
 
         <TextView
             android:id="@+id/textViewSituacaoUsuario1"
@@ -48,10 +50,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@drawable/background2"
+                android:background="@drawable/background_azul2"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="13dp" >
+                android:padding="13dp"
+                android:id="@+id/login_header_3" >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
