--- a/SigaaBiblio/res/layout/activity_renovacao.xml
+++ b/SigaaBiblio/res/layout/activity_renovacao.xml
@@ -3,21 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background_softblue" >
+    android:background="@color/background_softblue"
+    android:id="@+id/login_body" >
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="70dp"
-	    android:background="@drawable/background1"
+	    android:background="@drawable/background_azul1"
 	    android:gravity="center"
-	    android:orientation="horizontal" >
+	    android:orientation="horizontal"
+	    android:id="@+id/login_header"
+	     >
 
 	    <TextView
-	        android:id="@+id/textViewTitleRenovacao"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/header_renovacao"
 	        android:textColor="@android:color/white"
-	        android:textSize="25dp" />
+	        android:textSize="25dp"
+	         />
 	</LinearLayout>
 
     <LinearLayout
