--- a/SigaaBiblio/res/layout/activity_selecionar_historico.xml
+++ b/SigaaBiblio/res/layout/activity_selecionar_historico.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background_softblue" >
+    android:background="@color/background_softblue"
+    android:id="@+id/login_body" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@drawable/background1"
+        android:background="@drawable/background_azul1"
         android:gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:id="@+id/login_header" >
 
         <TextView
             android:id="@+id/headerHistorico"
@@ -26,7 +28,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/login_header_2"
             android:layout_width="match_parent"
             android:layout_height="49dp"
             android:layout_gravity="center"
@@ -35,7 +37,7 @@
             android:gravity="center"
             android:text="@string/prompt_periodo_historico"
             android:textSize="20dp"
-            android:background="@drawable/background2" />
+            android:background="@drawable/background_azul2" />
     </LinearLayout>
 
 	 <LinearLayout
