--- a/SigaaBiblio/res/layout/activity_situacao_usuario.xml
+++ b/SigaaBiblio/res/layout/activity_situacao_usuario.xml
@@ -5,14 +5,16 @@
 	    android:layout_height="match_parent"
 	    android:orientation="vertical"
 	    android:background="@color/background_softblue"
-	    tools:context=".SituacaoUsuarioActivity">
+	    tools:context=".SituacaoUsuarioActivity"
+	    android:id="@+id/login_body">
 	    	    
 	    <LinearLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="70dp"
-		    android:background="@drawable/background1"
+		    android:background="@drawable/background_azul1"
 		    android:gravity="center"
-		    android:orientation="horizontal">
+		    android:orientation="horizontal"
+		    android:id="@+id/login_header">
 	        
 	        <TextView
 	            android:id="@+id/textViewTitleSituacao"
