--- a/SigaaBiblio/res/menu/renovacao.xml
+++ b/SigaaBiblio/res/menu/renovacao.xml
@@ -1,8 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/renovacao_storage"
         android:orderInCategory="100"
-        android:title="@string/action_settings"/>
+        android:title="Registro de Renovacoes"
+        android:alphabeticShortcut="r"
+        />
+     <item
+        android:id="@+id/action_settings"
+        android:title="@string/configuracoes_title"
+		android:alphabeticShortcut="@string/configuracoes_atalho"/>
 
 </menu>
