--- a/SigaaBiblio/res/layout/activity_menu.xml
+++ b/SigaaBiblio/res/layout/activity_menu.xml
@@ -80,7 +80,7 @@
             <br.nti.SigaaBiblio.layouts.DashboardLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:layout_weight="1.53" >
+                android:layout_weight="2.86" >
 
                 <Button
                     android:id="@+id/consultarAcervo"
@@ -115,13 +115,16 @@
                     android:layout_height="wrap_content"
                     android:text="Meus Empréstimos"
                      />
-
+                
+ 
                 <Button
                     android:id="@+id/button6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sair"
-                    android:onClick="mudarUsuario" />
+                    android:text="Localizar Bibliotecas"
+                    android:onClick="localizarBibliotecas"
+                    
+                     />
             </br.nti.SigaaBiblio.layouts.DashboardLayout>
         </LinearLayout>
 
