Mapas com caminhos ate as Bibliotecas

--- a/SigaaBiblio/res/layout/activity_maps.xml
+++ b/SigaaBiblio/res/layout/activity_maps.xml
@@ -8,10 +8,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MapsActivity" >
 
- <fragment
-        android:id="@+id/map"
+    <Spinner
+        android:id="@+id/spinnerMaps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_alignParentTop="true" />
+    
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.SupportMapFragment" />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/spinnerMaps"
+        android:orientation="vertical" >
 
+        <fragment
+    	    android:id="@+id/map"
+    	    android:layout_width="match_parent"
+    	    android:layout_height="match_parent"
+    	    class="com.google.android.gms.maps.SupportMapFragment" />
+        
+    </LinearLayout>
+
+    
 </RelativeLayout>
